@@ -1,7 +1,7 @@
 package school.hei.haapi.integration;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static school.hei.haapi.endpoint.rest.model.OrderDirection.ASC;
 import static school.hei.haapi.integration.StudentIT.student1;
 import static school.hei.haapi.integration.conf.TestUtils.*;
@@ -10,28 +10,27 @@ import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.context.ContextConfiguration;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import school.hei.haapi.endpoint.rest.api.CommentsApi;
 import school.hei.haapi.endpoint.rest.client.ApiClient;
 import school.hei.haapi.endpoint.rest.client.ApiException;
 import school.hei.haapi.endpoint.rest.model.Comment;
-import school.hei.haapi.integration.conf.AbstractContextInitializer;
-import school.hei.haapi.integration.conf.MockedThirdParties;
+import school.hei.haapi.integration.conf.FacadeITMockedThirdParties;
 import school.hei.haapi.integration.conf.TestUtils;
 
-@SpringBootTest(webEnvironment = RANDOM_PORT)
 @Testcontainers
-@ContextConfiguration(initializers = CommentIT.ContextInitializer.class)
 @AutoConfigureMockMvc
-class CommentIT extends MockedThirdParties {
+class CommentIT extends FacadeITMockedThirdParties {
   public static String STUDENT1_REF = "STD21001";
 
   @BeforeEach
   void setUp() {
     setUpCognito(cognitoComponentMock);
     setUpS3Service(fileService, student1());
+  }
+
+  private ApiClient anApiClient(String token) {
+    return TestUtils.anApiClient(token, localPort);
   }
 
   @Test
@@ -54,16 +53,17 @@ class CommentIT extends MockedThirdParties {
     List<Comment> actualTimestampAscendant = api.getComments(1, 10, ASC, null);
 
     // Verify Comments are filter by timestamp Ascendant
-    assertEquals(comment1().getContent(), actualTimestampAscendant.get(0).getContent());
+    assertEquals(comment1().getContent(), actualTimestampAscendant.getFirst().getContent());
     assertEquals(
-        comment1().getCreationDatetime(), actualTimestampAscendant.get(0).getCreationDatetime());
+        comment1().getCreationDatetime(),
+        actualTimestampAscendant.getFirst().getCreationDatetime());
 
     // Verify Comments are filter by timestamp Descendant (by default)
     assertEquals(
-        createCommentByTeacher().getContent(), actualTimestampDescendant.get(0).getContent());
+        createCommentByTeacher().getContent(), actualTimestampDescendant.getFirst().getContent());
     assertEquals(
         createCommentByTeacher().getStudentId(),
-        actualTimestampDescendant.get(0).getSubject().getId());
+        actualTimestampDescendant.getFirst().getSubject().getId());
   }
 
   @Test
@@ -133,18 +133,5 @@ class CommentIT extends MockedThirdParties {
         commentCreatedByTeacher().getObserver().getRef(), createdComment.getObserver().getRef());
     assertEquals(
         commentCreatedByTeacher().getSubject().getRef(), createdComment.getSubject().getRef());
-  }
-
-  private static ApiClient anApiClient(String token) {
-    return TestUtils.anApiClient(token, CommentIT.ContextInitializer.SERVER_PORT);
-  }
-
-  static class ContextInitializer extends AbstractContextInitializer {
-    public static final int SERVER_PORT = anAvailableRandomPort();
-
-    @Override
-    public int getServerPort() {
-      return SERVER_PORT;
-    }
   }
 }
