@@ -1,8 +1,15 @@
 package school.hei.haapi.integration;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
-import static school.hei.haapi.integration.conf.TestUtils.*;
+import static school.hei.haapi.integration.conf.TestUtils.MANAGER1_TOKEN;
+import static school.hei.haapi.integration.conf.TestUtils.MANAGER_ID;
+import static school.hei.haapi.integration.conf.TestUtils.STUDENT1_TOKEN;
+import static school.hei.haapi.integration.conf.TestUtils.TEACHER1_TOKEN;
+import static school.hei.haapi.integration.conf.TestUtils.assertThrowsForbiddenException;
+import static school.hei.haapi.integration.conf.TestUtils.coordinatesWithValues;
+import static school.hei.haapi.integration.conf.TestUtils.setUpCognito;
+import static school.hei.haapi.integration.conf.TestUtils.setUpS3Service;
+import static school.hei.haapi.integration.conf.TestUtils.uploadProfilePicture;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.IOException;
@@ -11,14 +18,11 @@ import java.net.http.HttpResponse;
 import java.time.Instant;
 import java.time.LocalDate;
 import java.util.List;
-import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.test.annotation.DirtiesContext;
-import org.springframework.test.context.ContextConfiguration;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import school.hei.haapi.endpoint.rest.api.UsersApi;
 import school.hei.haapi.endpoint.rest.client.ApiClient;
@@ -28,20 +32,16 @@ import school.hei.haapi.endpoint.rest.model.CrupdateManager;
 import school.hei.haapi.endpoint.rest.model.EnableStatus;
 import school.hei.haapi.endpoint.rest.model.Manager;
 import school.hei.haapi.endpoint.rest.model.Sex;
-import school.hei.haapi.integration.conf.AbstractContextInitializer;
-import school.hei.haapi.integration.conf.MockedThirdParties;
+import school.hei.haapi.integration.conf.FacadeITMockedThirdParties;
 import school.hei.haapi.integration.conf.TestUtils;
 
-@SpringBootTest(webEnvironment = RANDOM_PORT)
 @Testcontainers
-@ContextConfiguration(initializers = ManagerIT.ContextInitializer.class)
 @AutoConfigureMockMvc
-@Slf4j
-public class ManagerIT extends MockedThirdParties {
+public class ManagerIT extends FacadeITMockedThirdParties {
   @Autowired ObjectMapper objectMapper;
 
-  private static ApiClient anApiClient(String token) {
-    return TestUtils.anApiClient(token, ContextInitializer.SERVER_PORT);
+  private ApiClient anApiClient(String token) {
+    return TestUtils.anApiClient(token, localPort);
   }
 
   public static Manager manager1() {
@@ -61,40 +61,6 @@ public class ManagerIT extends MockedThirdParties {
     manager.setNic("");
     manager.setCoordinates(new Coordinates().longitude(55.555).latitude(-55.555));
     return manager;
-  }
-
-  public static Manager disabledManager1() {
-    return new Manager()
-        .id("'manager2_id'")
-        .firstName("Disable")
-        .lastName("One")
-        .email("manager+disable1@hei.school")
-        .ref("MGR29001")
-        .status(EnableStatus.DISABLED)
-        .sex(Sex.M)
-        .birthDate(LocalDate.parse("2000-12-01"))
-        .entranceDatetime(Instant.parse("2021-11-08T08:25:24.00Z"))
-        .phone("0322411123")
-        .nic("")
-        .birthPlace("")
-        .address("Adr 1");
-  }
-
-  public static Manager suspendedManager1() {
-    return new Manager()
-        .id("'manager3_id'")
-        .firstName("Suspended")
-        .lastName("One")
-        .email("manager+suspended@hei.school")
-        .ref("MGR29003")
-        .status(EnableStatus.SUSPENDED)
-        .sex(Sex.F)
-        .birthDate(LocalDate.parse("2000-12-02"))
-        .entranceDatetime(Instant.parse("2021-11-09T08:26:24.00Z"))
-        .phone("0322411123")
-        .nic("")
-        .birthPlace("")
-        .address("Adr 2");
   }
 
   public static CrupdateManager someUpdatableManager1() {
@@ -128,7 +94,7 @@ public class ManagerIT extends MockedThirdParties {
   }
 
   @Test
-  @DirtiesContext
+  @Disabled("dirty")
   void manager_update_own_ok() throws ApiException {
     ApiClient manager1Client = anApiClient(MANAGER1_TOKEN);
     UsersApi api = new UsersApi(manager1Client);
@@ -140,8 +106,7 @@ public class ManagerIT extends MockedThirdParties {
   @Test
   void manager_update_own_profile_picture() throws IOException, InterruptedException {
     HttpResponse<InputStream> response =
-        uploadProfilePicture(
-            ContextInitializer.SERVER_PORT, MANAGER1_TOKEN, MANAGER_ID, "managers");
+        uploadProfilePicture(localPort, MANAGER1_TOKEN, MANAGER_ID, "managers");
 
     Manager manager = objectMapper.readValue(response.body(), Manager.class);
 
@@ -185,15 +150,6 @@ public class ManagerIT extends MockedThirdParties {
     List<Manager> managers = api.getManagers(1, 20, null, null);
 
     assertEquals(4, managers.size());
-    assertEquals(manager1(), managers.get(0));
-  }
-
-  static class ContextInitializer extends AbstractContextInitializer {
-    public static final int SERVER_PORT = anAvailableRandomPort();
-
-    @Override
-    public int getServerPort() {
-      return SERVER_PORT;
-    }
+    assertEquals(manager1(), managers.getFirst());
   }
 }
