@@ -2,7 +2,6 @@ package school.hei.haapi.integration;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
 import static school.hei.haapi.integration.ManagerIT.manager1;
 import static school.hei.haapi.integration.StudentIT.student1;
 import static school.hei.haapi.integration.conf.TestUtils.FEE1_ID;
@@ -10,7 +9,6 @@ import static school.hei.haapi.integration.conf.TestUtils.MANAGER1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.STUDENT1_ID;
 import static school.hei.haapi.integration.conf.TestUtils.STUDENT1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.TEACHER1_TOKEN;
-import static school.hei.haapi.integration.conf.TestUtils.anAvailableRandomPort;
 import static school.hei.haapi.integration.conf.TestUtils.assertThrowsApiException;
 import static school.hei.haapi.integration.conf.TestUtils.setUpCognito;
 import static school.hei.haapi.integration.conf.TestUtils.setUpEventBridge;
@@ -23,9 +21,7 @@ import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.ContextConfiguration;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import school.hei.haapi.endpoint.rest.api.PayingApi;
 import school.hei.haapi.endpoint.rest.api.UsersApi;
@@ -35,30 +31,17 @@ import school.hei.haapi.endpoint.rest.model.CrupdateStudent;
 import school.hei.haapi.endpoint.rest.model.Fee;
 import school.hei.haapi.endpoint.rest.model.Payment;
 import school.hei.haapi.endpoint.rest.model.Student;
-import school.hei.haapi.integration.conf.AbstractContextInitializer;
-import school.hei.haapi.integration.conf.MockedThirdParties;
+import school.hei.haapi.integration.conf.FacadeITMockedThirdParties;
 import school.hei.haapi.integration.conf.TestUtils;
 import software.amazon.awssdk.services.eventbridge.EventBridgeClient;
 
-@SpringBootTest(webEnvironment = RANDOM_PORT)
 @Testcontainers
-@ContextConfiguration(initializers = PaginationIT.ContextInitializer.class)
 @AutoConfigureMockMvc
-class PaginationIT extends MockedThirdParties {
+class PaginationIT extends FacadeITMockedThirdParties {
   @MockBean private EventBridgeClient eventBridgeClientMock;
 
-  private static ApiClient anApiClient(String token) {
-    return TestUtils.anApiClient(token, ContextInitializer.SERVER_PORT);
-  }
-
-  private static Payment payment2() {
-    return new Payment()
-        .id("payment2_id")
-        .feeId(FEE1_ID)
-        .type(Payment.TypeEnum.CASH)
-        .amount(3000)
-        .comment("Comment")
-        .creationDatetime(Instant.parse("2022-11-09T08:25:25.00Z"));
+  private ApiClient anApiClient(String token) {
+    return TestUtils.anApiClient(token, localPort);
   }
 
   @BeforeEach
@@ -103,7 +86,7 @@ class PaginationIT extends MockedThirdParties {
     assertEquals(4, page4.size());
     assertEquals(0, page100.size());
     // students are ordered by ref
-    assertTrue(isBefore(page1.get(0).getRef(), page1.get(2).getRef()));
+    assertTrue(isBefore(page1.getFirst().getRef(), page1.get(2).getRef()));
   }
 
   @Test
@@ -119,8 +102,8 @@ class PaginationIT extends MockedThirdParties {
     assertEquals(pageSize, page1.size());
     assertEquals(2, page2.size());
     assertEquals(2, page3.size());
-    assertTrue(isAfter(page1.get(0).getDueDatetime(), page1.get(1).getDueDatetime()));
-    assertTrue(isAfter(page1.get(1).getDueDatetime(), page2.get(0).getDueDatetime()));
+    assertTrue(isAfter(page1.getFirst().getDueDatetime(), page1.get(1).getDueDatetime()));
+    assertTrue(isAfter(page1.get(1).getDueDatetime(), page2.getFirst().getDueDatetime()));
   }
 
   @Test
@@ -136,8 +119,8 @@ class PaginationIT extends MockedThirdParties {
     assertEquals(pageSize, page1.size());
     assertEquals(1, page2.size());
     assertEquals(0, page3.size());
-    assertTrue(isAfter(page1.get(0).getCreationDatetime(), page1.get(1).getCreationDatetime()));
-    assertTrue(isAfter(page1.get(1).getCreationDatetime(), page2.get(0).getCreationDatetime()));
+    assertTrue(isAfter(page1.getFirst().getCreationDatetime(), page1.get(1).getCreationDatetime()));
+    assertTrue(isAfter(page1.get(1).getCreationDatetime(), page2.getFirst().getCreationDatetime()));
   }
 
   private boolean isBefore(String a, String b) {
@@ -159,14 +142,5 @@ class PaginationIT extends MockedThirdParties {
     assertThrowsApiException(
         "{\"type\":\"400 BAD_REQUEST\",\"message\":\"page size must be <500\"}",
         () -> api.getStudents(1, 1000, null, null, null, null, null, null, null, null, null));
-  }
-
-  static class ContextInitializer extends AbstractContextInitializer {
-    public static final int SERVER_PORT = anAvailableRandomPort();
-
-    @Override
-    public int getServerPort() {
-      return SERVER_PORT;
-    }
   }
 }
